...
        },
      }}
    >
      <Tabs.Screen
        name="swipe"
        options={{
          tabBarButtonTestID: "tab-swipe",
          tabBarIcon: SwipeTabIcon,
        }}
      />
      <Tabs.Screen
        name="messages"
        options={{
...
          tabBarIcon: MessagesTabIcon,
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          tabBarButtonTestID: "tab-profile",
          tabBarIcon: ProfileTabIcon,
        }}
      />
    </Tabs>
  );
};
...
